# pybank

./: .gitignore  LICENSE  README  README.md  bank.py  convert.py  fetch.py  main.py  model.py  pyproject.toml  qif.py  setup.py  test.py
download/: __init__.py  bank.py  dkb.py  ib.py  postfinance.py  revolut.py
fetch/: __init__.py  bank.py  browser.py  dkb.py  ib.py  postfinance.py  revolut.py
importer/: __init__.py  dkb.py  ib.py  postfinance.py  revolut.py  schwab.py  wise.py
src/pybank/: convert.py  fetch.py  qif.py
src/pybank/download/: bank.py  dkb.py  ib.py  postfinance.py  revolut.py
src/pybank/importer/: __init__.py  auto.py  dkb.py  ib.py  postfinance.py  revolut.py  schwab.py  wise.py
tests/: test_qif.py
