[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pybank"
version = "0.1.0"
description = "Download and convert bank statements"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Thomas Wittek", email = "thomas@wittek.me"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.8.0",
    "chardet>=5.2.0",
    "selenium>=4.35.0",
]

[project.scripts]
pybank-fetch = "pybank.fetch:main"
pybank-convert = "pybank.convert:main"

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
